--- a/Search Display Templates/Table Layout with Sorting Templates (CSWP)/Item_List_Item.html
+++ b/Search Display Templates/Table Layout with Sorting Templates (CSWP)/Item_List_Item.html
@@ -5,7 +5,7 @@
 <!--[if gte mso 9]><xml>
 <mso:CustomDocumentProperties>
 <mso:TemplateHidden msdt:dt="string">0</mso:TemplateHidden>
-<mso:ManagedPropertyMapping msdt:dt="string">'Link URL':'Path','Property 1':'Title','Property 2':'','Property 3':'','Property 4:'','Property 5':'','Property 6':'','Property 7':'','Property 8':'','Property 9':'','Property 10':'','FileExtension','SecondaryFileExtension'</mso:ManagedPropertyMapping>
+<mso:ManagedPropertyMapping msdt:dt="string">'SPSiteURL','ListID','ListItemID','ContentTypeId','Link URL':'Path','Property 1':'Title','Property 2':'','Property 3':'','Property 4:'','Property 5':'','Property 6':'','Property 7':'','Property 8':'','Property 9':'','Property 10':'','FileExtension','SecondaryFileExtension'</mso:ManagedPropertyMapping>
 <mso:MasterPageDescription msdt:dt="string">This is the item row template, use this template in combination with the List Table Control template.</mso:MasterPageDescription>
 <mso:ContentTypeId msdt:dt="string">0x0101002039C03B61C64EC4A04F5361F385106603</mso:ContentTypeId>
 <mso:TargetControlType msdt:dt="string">;#Content Web Parts;#</mso:TargetControlType>
@@ -17,11 +17,19 @@
 <body>
     <div id="TwoLines">
 <!--#_
+// Give up your names for the properties in the following array
+var propertyNames = {"Property 1":"Property 1 header value","Property 2":"Property 2 header value"};
+
 var encodedId = $htmlEncode(ctx.ClientControl.get_nextUniqueId() + "_tableitems_");
 
 var linkURL = $getItemValue(ctx, "Link URL");
 linkURL.overrideValueRenderer($urlHtmlEncode);
 var iconURL = Srch.ContentBySearch.getIconSourceFromItem(ctx.CurrentItem);
+
+var siteUrl = $getItemValue(ctx, 'SPSiteURL');
+var listID = $getItemValue(ctx, 'ListID');
+var listItemID = $getItemValue(ctx, 'ListItemID');
+var ContentTypeId = $getItemValue(ctx, 'ContentTypeId');
 
 var rowId = encodedId + "row";
 var editCellId = rowId + "_cell";
@@ -44,11 +52,11 @@ _#-->
             // Show the properties that aren't empty
             for(var i = 1; i <= 10; i++) { 
                 var property = $getItemValue(ctx, String.format("Property {0}", i));
-                if(!property.isEmpty)
-                {
+                if(property.managedPropertyName !== String.format("Property {0}", i)) {
+                    var propertyName = typeof propertyNames[property.propertyLookupName] === "undefined" ? property.managedPropertyName : propertyNames[property.propertyLookupName];
             _#-->
             <th class="ms-vh2">
-                _#= property.managedPropertyName =#_ 
+                _#= propertyName =#_ 
 
                 <span id="_#= property.managedPropertyName.replace(/ /g, '-') =#_">
                     <span style="" class="sortarrow ms-sortarrowup-iconouter" ></span>
@@ -97,8 +105,17 @@ _#-->
             _#-->
                 _#= value =#_
             <!--#_
+                    if (i === 1 && !siteUrl.isEmpty && !listID.isEmpty && !listItemID.isEmpty && !ContentTypeId.isEmpty) {
+                        var viewPropUrl = String.format('{0}/_layouts/15/listform.aspx?ListId={1}&ID={2}&ContentTypeID={3}&Source={4}', siteUrl, listID, listItemID, ContentTypeId, window.location.href.split('#')[0]);
+            _#-->
+                        &nbsp;&nbsp;
+                        <span title="Open Menu" class="NotificationDiv ms-ellipsis-a" rel="_#= viewPropUrl =#_" ref="_#= property =#_" style="cursor: pointer; margin-top: 3px; float: right;">
+                            <img alt="Open Menu" src="/_layouts/15/images/spcommon.png" class="ms-ellipsis-icon">
+                        </span>
+            <!--#_
+                    }
                 }
-             _#-->
+            _#-->
                 </td>
             <!--#_
             } 
