--- a/Search Display Templates/AngularJS Templates (CSWP)/Part2/Control_Angular_Part2.html
+++ b/Search Display Templates/AngularJS Templates (CSWP)/Part2/Control_Angular_Part2.html
@@ -5,12 +5,10 @@
     <!--[if gte mso 9]><xml>
     <mso:CustomDocumentProperties>
     <mso:TemplateHidden msdt:dt="string">0</mso:TemplateHidden>
-    <mso:MasterPageDescription msdt:dt="string">This is the default Control Display Template that will list the items. It does not allow the user to page through items.</mso:MasterPageDescription>
+    <mso:MasterPageDescription msdt:dt="string">This is the control display template for AngularJS.</mso:MasterPageDescription>
     <mso:ContentTypeId msdt:dt="string">0x0101002039C03B61C64EC4A04F5361F385106601</mso:ContentTypeId>
     <mso:TargetControlType msdt:dt="string">;#Content Web Parts;#</mso:TargetControlType>
     <mso:HtmlDesignAssociated msdt:dt="string">1</mso:HtmlDesignAssociated>
-    <mso:HtmlDesignConversionSucceeded msdt:dt="string">True</mso:HtmlDesignConversionSucceeded>
-<mso:HtmlDesignStatusAndPreview msdt:dt="string">http://sp2013app/_catalogs/masterpage/Tests/AngularJS/Control_Angular_Part2.html, Conversion successful.</mso:HtmlDesignStatusAndPreview>
 </mso:CustomDocumentProperties>
     </xml><![endif]-->
 </head>
