Updated the table layout templates
Updated the table layout templates to fix a bug with the Ajax call of
the web url.

--- a/Search Display Templates/Table Layout with Sorting Templates (CSWP)/Control_List_Table.html
+++ b/Search Display Templates/Table Layout with Sorting Templates (CSWP)/Control_List_Table.html
@@ -15,6 +15,7 @@
 
 <body>
     <script>
+        $includeScript(this.URL, "~sitecollection/_catalogs/masterpage/TableLayout/table.redirection.js");
     </script>
 
     <div id="Control_List">
@@ -139,40 +140,15 @@ AddPostRenderCallback(ctx, function() {
         var targetElement = document.getElementsByClassName('NotificationDiv');
         if (targetElement.length > 0) {
             for (var i = 0; i < targetElement.length; i++) {
-                var element = targetElement[i]; 
-                // Do a query to retrieve the web url for each element
-                (function (element) {
-                    // Retrieve the path from the element
-                    var docPath = element.getAttribute('path');
-                    docPath = docPath.substring(0, docPath.lastIndexOf('/')) + "/_api/contextinfo";
+                var elm = targetElement[i];
+                var calloutOptions = new CalloutOptions();
+                calloutOptions.ID = 'notificationcallout-' + i;
+                calloutOptions.launchPoint = elm;
+                calloutOptions.beakOrientation = 'leftRight';
+                calloutOptions.content = String.format('<a href="{0}&PageType=4" onclick="javascript:tableLayoutDT.redirectToPropertiesUrl(this, \'{1}\');return false;" title="View properties">View properties</a><br /><a href="{0}&PageType=6" onclick="javascript:tableLayoutDT.redirectToPropertiesUrl(this, \'{1}\');return false;" title="Edit properties">Edit properties</a>', elm.getAttribute('rel'), elm.getAttribute('path'));
+                calloutOptions.title = elm.getAttribute('ref');
 
-                    var request = new XMLHttpRequest();
-                    request.open('POST', docPath, true);
-                    request.setRequestHeader('Accept', 'application/json; odata=verbose');
-                    request.onload = function (e) {
-                        if (request.readyState === 4) {
-                            if (!Srch.U.n(request.response)) {
-                                var data = JSON.parse(request.response);
-                                var webUrl = data.d.GetContextWebInformation.WebFullUrl;
-                                // Check if the web url that is retrieved is not null or empty
-                                if (!Srch.U.n(webUrl) && !Srch.U.e(webUrl)) { 
-                                    var calloutOptions = new CalloutOptions();
-                                    calloutOptions.ID = 'notificationcallout-' + i;
-                                    calloutOptions.launchPoint = element;
-                                    calloutOptions.beakOrientation = 'leftRight';
-                                    calloutOptions.content = String.format('<a href="{0}{1}&PageType=4" title="View properties">View properties</a><br /><a href="{0}{1}&PageType=6" title="Edit properties">Edit properties</a>', webUrl, element.getAttribute('rel'));
-                                    calloutOptions.title = element.getAttribute('ref');
-
-                                    var displayedPopup = CalloutManager.createNew(calloutOptions);
-                                }
-                            }
-                        }
-                    };
-                    request.onerror = function (e) {
-                        // Catching errors
-                    };
-                    request.send(null);
-                })(element);
+                var displayedPopup = CalloutManager.createNew(calloutOptions);
             }
         }
     });
