Table layout fix managed properties
A table layout fix was needed when the managed properties were not
changed in the web part configuration.

--- a/Search Display Templates/Table Layout with Sorting Templates (CSWP)/Control_List_Table.html
+++ b/Search Display Templates/Table Layout with Sorting Templates (CSWP)/Control_List_Table.html
@@ -99,6 +99,16 @@ AddPostRenderCallback(ctx, function() {
         }
     }
 
+    // Check if the properties array is empty. 
+    // This can happen if you do not override the managed properties in the web part.
+    if ($isEmptyArray(properties)) {
+        if (!Srch.U.n(this.DisplayTemplateData)) {
+            if (!Srch.U.n(this.DisplayTemplateData.ManagedPropertyMapping)) {
+                properties = this.DisplayTemplateData.ManagedPropertyMapping;
+            }
+        }
+    }
+
     // Show or hide the sort options
     if (!$isEmptyArray(properties)) {
         for (var key in properties) {
